--- a/utcdate - Copy/pom.xml
+++ b/utcdate - Copy/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
+		<version>2.1.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ie.cct</groupId>
-	<artifactId>isodate</artifactId>
+	<artifactId>utcdate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>isodate</name>
-	<description>Demo project for Spring Boot</description>
+	<name>utcdate</name>
+	<description>Timestamp converter project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
