--- a/utcdate/src/main/resources/application.properties
+++ b/utcdate/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+endpoints.cors.allow-credentials=true
+endpoints.cors.allowed-origins=*
+endpoints.cors.allowed-methods=*
+endpoints.cors.allowed-headers=*
+cors.urls=*
